src/core-crm/objects/Opportunity_Code_Auto_Number__c/Opportunity_Code_Auto_Number__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting contains the auto-numbers used for the Opportunity object&apos;s Opportunity Code.</description>
    <label>Opportunity Code Auto Number</label>
</CustomObject>