src/core-crm/objects/Opportunity_Code_Auto_Number__c/fields/Advancement__c.field-meta.xml
<CustomField>
    <fullName>Advancement__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Advancement Opportunity records.</description>
    <label>Advancement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>