src/core-crm/objects/Opportunity_Code_Auto_Number__c/fields/Commercialisation__c.field-meta.xml
<CustomField>
    <fullName>Commercialisation__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Commercialisation Opportunity records.</description>
    <label>Commercialisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>