src/core-crm/objects/Opportunity_Code_Auto_Number__c/fields/Individual_Giving__c.field-meta.xml
<CustomField>
    <fullName>Individual_Giving__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Individual Giving Opportunity records.</description>
    <label>Individual Giving</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>