src/core-crm/objects/Opportunity_Code_Auto_Number__c/fields/International_Projects_Unit__c.field-meta.xml
<CustomField>
    <fullName>International_Projects_Unit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for International Projects Unit Opportunity records.</description>
    <label>International Projects Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>