src/core-crm/objects/Opportunity_Code_Auto_Number__c/fields/Research_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Research_Partnership__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Auto-number used for Research Partnership Opportunity records.</description>
    <label>Research Partnership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>